--- a/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses.ipynb
+++ b/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,14 +808,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3347,6 +3347,45 @@
           "xref": "x",
           "y": "Life form",
           "yref": "y"
+         },
+         {
+          "font": {
+           "color": "#2ca02c",
+           "family": "Arial",
+           "size": 18
+          },
+          "showarrow": false,
+          "text": "<b>Correct<b>",
+          "x": 0.2,
+          "xref": "paper",
+          "y": 1.081,
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "color": "#d62728",
+           "family": "Arial",
+           "size": 18
+          },
+          "showarrow": false,
+          "text": "<b>Incorrect<b>",
+          "x": 0.5333333333333333,
+          "xref": "paper",
+          "y": 1.081,
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "color": "#1f77b4",
+           "family": "Arial",
+           "size": 18
+          },
+          "showarrow": false,
+          "text": "<b>No Information<b>",
+          "x": 0.8666666666666667,
+          "xref": "paper",
+          "y": 1.081,
+          "yref": "paper"
          }
         ],
         "bargap": 0.1,
@@ -4268,34 +4307,28 @@
     "                            font=dict(family='Arial', size=14,\n",
     "                                      color='rgb(248, 248, 255)'),\n",
     "                            showarrow=False))\n",
-    "   \n",
-    "    # labeling the first Likert scale (on the top)\n",
-    "    # if yd == y_data[-1]:\n",
-    "    #     annotations.append(dict(xref='x', yref='paper',\n",
-    "    #                             x=xd[0] / 2, y=1.1,\n",
-    "    #                             text=top_labels[0],\n",
-    "    #                             font=dict(family='Arial', size=14,\n",
-    "    #                                       color='rgb(67, 67, 67)'),\n",
-    "    #                             showarrow=False))\n",
+    "\n",
     "    space = xd[0]\n",
     "    for i in range(1, len(xd)):\n",
     "            # labeling the rest of percentages for each bar (x_axis)\n",
     "            annotations.append(dict(xref='x', yref='y',\n",
-    "                                    x=space + (xd[i]/2), y=yd,\n",
+    "                                    x=space + (xd[i]/2),                                     \n",
+    "                                    y=yd,\n",
     "                                    text=str(xd[i]) + '%',\n",
     "                                    font=dict(family='Arial', size=14,\n",
     "                                              color='rgb(248, 248, 255)'),\n",
     "                                    showarrow=False))\n",
-    "            \n",
-    "            # labeling the Likert scale\n",
-    "            # if yd == y_data[-1]:\n",
-    "            #     annotations.append(dict(xref='x', yref='paper',\n",
-    "            #                             x=space + (xd[i]/2), y=1.1,\n",
-    "            #                             text=top_labels[i],\n",
-    "            #                             font=dict(family='Arial', size=14,\n",
-    "            #                                       color='rgb(67, 67, 67)'),\n",
-    "            #                             showarrow=False))\n",
     "            space += xd[i]\n",
+    "\n",
+    "# Labeling top axis\n",
+    "for idx, label in enumerate(top_labels):\n",
+    "    annotations.append(dict(xref='paper', yref='paper',\n",
+    "                            x=idx/3 + 0.2, y=1.081,\n",
+    "                            text=F\"<b>{label}<b>\",\n",
+    "                            font=dict(family='Arial', size=18,\n",
+    "                                        color=colors[idx]),\n",
+    "                            showarrow=False))\n",
+    "\n",
     "\n",
     "# Remove low values\n",
     "for idx, annotation in enumerate(annotations):\n",
@@ -4307,6 +4340,28 @@
     "    except:\n",
     "        continue\n",
     "    \n",
+    "fig.update_layout(annotations=annotations, \n",
+    "                  width=1100, height=800,\n",
+    "                  bargap=0.1)\n",
+    "\n",
+    "\n",
+    "# fig.update_yaxes(automargin=True)\n",
+    "\n",
+    "fig.show()\n",
+    "\n",
+    "# folder_figures = \"../../../reports/figures/\"\n",
+    "# file_name = \"PxPlot_HTML_BarchartPredictions.html\"\n",
+    "# fig.write_html(F\"{folder_figures}{file_name}\")\n",
+    "# file_name = \"PxPlot_PDF_BarchartPredictions.pdf\"\n",
+    "# fig.write_image(F\"{folder_figures}{file_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create custom legend using annotations\n",
     "# legend_items = [\n",
     "#     {'name': 'Correct', 'color': '#2ca02c', 'ypos': 1.09},\n",
@@ -4327,23 +4382,7 @@
     "#         text=item['name'],\n",
     "#         showarrow=False,\n",
     "#         font=dict(size=10)\n",
-    "#     )\n",
-    "\n",
-    "\n",
-    "fig.update_layout(annotations=annotations, \n",
-    "                  width=1100, height=800,\n",
-    "                  bargap=0.1)\n",
-    "\n",
-    "\n",
-    "# fig.update_yaxes(automargin=True)\n",
-    "\n",
-    "fig.show()\n",
-    "\n",
-    "folder_figures = \"../../../reports/figures/\"\n",
-    "file_name = \"PxPlot_HTML_BarchartPredictions.html\"\n",
-    "fig.write_html(F\"{folder_figures}{file_name}\")\n",
-    "file_name = \"PxPlot_PDF_BarchartPredictions.pdf\"\n",
-    "fig.write_image(F\"{folder_figures}{file_name}\")"
+    "#     )"
    ]
   }
  ],
