--- a/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses.ipynb
+++ b/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses.ipynb
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3356,7 +3356,7 @@
           },
           "showarrow": false,
           "text": "<b>Correct<b>",
-          "x": 0.2,
+          "x": 0.225,
           "xref": "paper",
           "y": 1.081,
           "yref": "paper"
@@ -3369,7 +3369,7 @@
           },
           "showarrow": false,
           "text": "<b>Incorrect<b>",
-          "x": 0.5333333333333333,
+          "x": 0.5583333333333333,
           "xref": "paper",
           "y": 1.081,
           "yref": "paper"
@@ -3382,7 +3382,7 @@
           },
           "showarrow": false,
           "text": "<b>No Information<b>",
-          "x": 0.8666666666666667,
+          "x": 0.8916666666666666,
           "xref": "paper",
           "y": 1.081,
           "yref": "paper"
@@ -4323,7 +4323,7 @@
     "# Labeling top axis\n",
     "for idx, label in enumerate(top_labels):\n",
     "    annotations.append(dict(xref='paper', yref='paper',\n",
-    "                            x=idx/3 + 0.2, y=1.081,\n",
+    "                            x=idx/3 + 0.225, y=1.081,\n",
     "                            text=F\"<b>{label}<b>\",\n",
     "                            font=dict(family='Arial', size=18,\n",
     "                                        color=colors[idx]),\n",
@@ -4349,11 +4349,11 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "# folder_figures = \"../../../reports/figures/\"\n",
-    "# file_name = \"PxPlot_HTML_BarchartPredictions.html\"\n",
-    "# fig.write_html(F\"{folder_figures}{file_name}\")\n",
-    "# file_name = \"PxPlot_PDF_BarchartPredictions.pdf\"\n",
-    "# fig.write_image(F\"{folder_figures}{file_name}\")"
+    "folder_figures = \"../../../reports/figures/\"\n",
+    "file_name = \"PxPlot_HTML_BarchartPredictions.html\"\n",
+    "fig.write_html(F\"{folder_figures}{file_name}\")\n",
+    "file_name = \"PxPlot_PDF_BarchartPredictions.pdf\"\n",
+    "fig.write_image(F\"{folder_figures}{file_name}\")"
    ]
   },
   {
