--- a/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_per_species_per_trait_sentences_original.ipynb
+++ b/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_per_species_per_trait_sentences_original.ipynb
@@ -18,6 +18,7 @@
     "import glob\n",
     "from tqdm import tqdm\n",
     "import random\n",
+    "import time\n",
     "from dotenv import load_dotenv"
    ]
   },
@@ -198,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                           \r"
+      "16: Croton niveus:  88%|████████▊ | 21/24 [02:14<00:24,  8.05s/it]         "
      ]
     }
    ],
@@ -220,8 +221,8 @@
     "# Loop over each JSON file in the list caribbean_jsons_paras\n",
     "for idx, (species, text) in enumerate(caribbean_paras.items()):\n",
     "\n",
-    "    if species not in test_list:\n",
-    "        continue\n",
+    "    # if species not in test_list:\n",
+    "    #     continue\n",
     "    \n",
     "    # Replace spaces in the species name with underscores\n",
     "    folder_species = species.replace(' ', '_')\n",
@@ -265,6 +266,8 @@
     "        # Save the completion to a JSON file with the file name in the species directory\n",
     "        with open(F\"{folder_prompts}{folder_species}/{file_name}.json\", 'w') as fp:\n",
     "            json.dump(completion, fp)\n",
+    "\n",
+    "        time.sleep(2)\n",
     "            \n"
    ]
   },
