--- a/notebooks/reports/OpenAI/5.2.2_ChatGPT_prompt_readings_zeroshot.ipynb
+++ b/notebooks/reports/OpenAI/5.2.2_ChatGPT_prompt_readings_zeroshot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,37 +19,33 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Open Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def extract_list_from_string(input_string):\n",
-    "#     if 'NA' in input_string:\n",
-    "#         return 'NA'\n",
+    "folder_traits = \"../../../data/OpenAI/Traits/\"\n",
     "\n",
-    "#     # Clean up the input string by removing double parentheses\n",
-    "#     cleaned_string = re.sub(r'\\(\\(', r'(', input_string)\n",
-    "#     cleaned_string = re.sub(r'\\)\\)', r')', cleaned_string)\n",
+    "with open(F\"{folder_traits}Andrei.json\", 'r') as f:\n",
+    "  caribbean_traits_dict = json.load(f)\n",
     "\n",
-    "#     # Find the last occurrence of '[' and ']' to extract the last list\n",
-    "#     start_index = cleaned_string.rfind('[')\n",
-    "#     end_index = cleaned_string.rfind(']')\n",
-    "\n",
-    "#     # Extract the substring between the '[' and ']'\n",
-    "#     list_string = cleaned_string[start_index:end_index + 1]\n",
-    "\n",
-    "#     # Remove any newline characters and leading/trailing whitespace\n",
-    "#     list_string = list_string.replace('\\n', '').strip()\n",
-    "\n",
-    "#     # Convert the string to a list of tuples\n",
-    "#     list_of_tuples = eval(list_string)\n",
-    "\n",
-    "#     # Return the list of tuples\n",
-    "#     return list_of_tuples\n",
-    "\n",
-    "import re\n",
-    "\n",
+    "traits_caribbean = list(caribbean_traits_dict.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def extract_list_from_string(input_string):\n",
     "    if 'NA' in input_string:\n",
     "        return 'NA'\n",
@@ -68,142 +64,199 @@
     "    # Remove any newline characters and leading/trailing whitespace\n",
     "    list_string = list_string.replace('\\n', '').strip()\n",
     "\n",
-    "    # Use a regular expression to match keys and values in the input string\n",
-    "    tuple_pattern = re.compile(r\"\\s*'([^']*)'\\s*,\\s*(-?\\d+)\\s*\")\n",
-    "    matches = tuple_pattern.findall(list_string)\n",
-    "\n",
-    "    # Convert the matches into a list of tuples\n",
-    "    list_of_tuples = [(key, int(value)) for key, value in matches]\n",
+    "    # Convert the string to a list of tuples\n",
+    "    list_of_tuples = eval(list_string)\n",
     "\n",
     "    # Return the list of tuples\n",
-    "    return list_of_tuples\n",
+    "    return list(list_of_tuples)\n",
     "\n",
+    "def match_trait_list(traits, tuple_lst):\n",
     "\n",
+    "    if len(traits) != len(tuple_lst):\n",
+    "        raise ValueError\n",
     "\n",
-    "def extract_values_from_list(input_list):\n",
-    "    # Check if the list contains 'NA'\n",
-    "    if 'NA' in input_list:\n",
-    "        return 'NA'\n",
     "    \n",
-    "    # Extract the values from the list of tuples\n",
-    "    values_list = []\n",
-    "    for tup in input_list:\n",
-    "        if tup[1] == 1:\n",
-    "            values_list.append(tup[0])\n",
-    "    \n",
-    "    # Return the list of values\n",
-    "    return values_list\n",
-    "\n",
-    "def extract_name_and_file(path):\n",
-    "    filename = os.path.basename(path)\n",
-    "    name, ext = os.path.splitext(filename)\n",
-    "    species_name = path.split('/')[-2]\n",
-    "    return species_name, name\n",
-    "\n",
-    "def split_on_capitals(string):\n",
-    "    # Split the string at every capital letter\n",
-    "    split_string = re.findall('[A-Z][^A-Z]*', string)\n",
-    "    # Join the split string with spaces\n",
-    "    new_string = ' '.join(split_string)\n",
-    "    \n",
-    "    return new_string\n",
-    "\n",
-    "def clean_text(text):\n",
-    "    # Remove slashes and spaces around them\n",
-    "    text = re.sub(r'\\s*/\\s*', '', text)\n",
-    "    # Remove any remaining spaces\n",
-    "    text = re.sub(r'\\s+', '', text)\n",
-    "    return text\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Open Data"
+    "    result = {trait: pred[2] for trait, pred in zip(traits, tuple_lst)}\n",
+    "    return result \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_traits = \"../../../data/OpenAI/Traits/\"\n",
+    "# Define the directory path containing the JSON files\n",
+    "folder_prompts = \"../../../data/OpenAI/PromptsResults/ZeroShot/\"\n",
     "\n",
-    "with open(F\"{folder_traits}Andrei.json\", 'r') as f:\n",
-    "  caribbean_traits_dict = json.load(f)"
+    "# Create a list of all JSON files in the directory\n",
+    "species_json_lst = glob.glob(F\"{folder_prompts}*\")\n",
+    "\n",
+    "# Create a dictionary to store the results\n",
+    "prompt_results_dict = collections.defaultdict(dict)\n",
+    "\n",
+    "# Iterate over each JSON file in the list\n",
+    "for idx, species_json in enumerate(species_json_lst):\n",
+    "    \n",
+    "    # Extract the species name from the file name and format it\n",
+    "    species_name = os.path.split(species_json)[1].replace('_', ' ')[0:-5]\n",
+    "    \n",
+    "    # Load the contents of the JSON file\n",
+    "    with open(species_json, 'r') as f:\n",
+    "        prompt_result = json.load(f)\n",
+    "\n",
+    "    # Extract the result from the JSON object\n",
+    "    result = res = prompt_result['choices'][0]['message']['content']\n",
+    "    \n",
+    "    # Extract a list of traits from the result\n",
+    "    result_list = extract_list_from_string(result)\n",
+    "    \n",
+    "    # Match the list of traits against a list of Caribbean traits\n",
+    "    result_dict = match_trait_list(traits_caribbean, result_list)\n",
+    "\n",
+    "    # Add the species name and matching traits to the dictionary\n",
+    "    prompt_results_dict[species_name] = result_dict\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                  \r"
-     ]
+     "data": {
+      "text/plain": [
+       "defaultdict(dict,\n",
+       "            {'Avicennia germinans': {'Life form': 'plant',\n",
+       "              'Leaf position': 'opposite',\n",
+       "              'Leaf composition': 'simple',\n",
+       "              'Leaf shape': 'lanceolate',\n",
+       "              'Leaf margin': 'entire',\n",
+       "              'Leaf upper side': 'dark green',\n",
+       "              'Leaf lower side': 'light green',\n",
+       "              'Leaf glands': 'present',\n",
+       "              'Leaf rachis': 'present',\n",
+       "              'Thorns/spines': 'absent',\n",
+       "              'Stipules': 'absent',\n",
+       "              'Inflorescence type': 'spike',\n",
+       "              'Sepals / calyx shape': 'tubular',\n",
+       "              'Sepals / calyx numer': '5',\n",
+       "              'Petals / corolla shape': 'tubular',\n",
+       "              'Petals / corolla number': '5',\n",
+       "              'Petals / corolla colour': 'white',\n",
+       "              'Stamen shape': 'long, slender',\n",
+       "              'Stamen number': '8-10',\n",
+       "              'Fruit type': 'drupe',\n",
+       "              'Fruit shape': 'oval',\n",
+       "              'Fruit colour': 'green',\n",
+       "              'Aril colour': 'absent',\n",
+       "              'Seed colour': 'brown'},\n",
+       "             'Metopium brownei': {'Life form': 'tree',\n",
+       "              'Leaf position': 'alternate',\n",
+       "              'Leaf composition': 'simple',\n",
+       "              'Leaf shape': 'oblong',\n",
+       "              'Leaf margin': 'entire',\n",
+       "              'Leaf upper side': 'green',\n",
+       "              'Leaf lower side': 'pale-green',\n",
+       "              'Leaf glands': 'absent',\n",
+       "              'Leaf rachis': 'absent',\n",
+       "              'Thorns/spines': 'absent',\n",
+       "              'Stipules': 'absent',\n",
+       "              'Inflorescence type': 'paniculate',\n",
+       "              'Sepals / calyx shape': 'stellate',\n",
+       "              'Sepals / calyx numer': '5',\n",
+       "              'Petals / corolla shape': 'ovate',\n",
+       "              'Petals / corolla number': '4',\n",
+       "              'Petals / corolla colour': 'yellow',\n",
+       "              'Stamen shape': 'filiform',\n",
+       "              'Stamen number': '8',\n",
+       "              'Fruit type': 'drupe',\n",
+       "              'Fruit shape': 'oblong-ellipsoid',\n",
+       "              'Fruit colour': 'red-brown',\n",
+       "              'Aril colour': 'absent',\n",
+       "              'Seed colour': 'brown'},\n",
+       "             'Handroanthus billbergii': {'Life form': 'tree',\n",
+       "              'Leaf position': 'alternate',\n",
+       "              'Leaf composition': 'pinnate',\n",
+       "              'Leaf shape': 'ovate',\n",
+       "              'Leaf margin': 'entire',\n",
+       "              'Leaf upper side': 'glabrous',\n",
+       "              'Leaf lower side': 'glabrous',\n",
+       "              'Leaf glands': 'none',\n",
+       "              'Leaf rachis': 'with rachis',\n",
+       "              'Thorns/spines': 'none',\n",
+       "              'Stipules': 'absent',\n",
+       "              'Inflorescence type': 'cluster',\n",
+       "              'Sepals / calyx shape': 'bell-shaped',\n",
+       "              'Sepals / calyx numer': '5',\n",
+       "              'Petals / corolla shape': 'trumpet-shaped',\n",
+       "              'Petals / corolla number': '5',\n",
+       "              'Petals / corolla colour': 'yellow',\n",
+       "              'Stamen shape': 'long',\n",
+       "              'Stamen number': '10-15',\n",
+       "              'Fruit type': 'capsule',\n",
+       "              'Fruit shape': 'cylindrical',\n",
+       "              'Fruit colour': 'brown',\n",
+       "              'Aril colour': 'none',\n",
+       "              'Seed colour': 'brown'},\n",
+       "             'Bursera karsteniana': {'Life form': 'Tree',\n",
+       "              'Leaf position': 'Alternate',\n",
+       "              'Leaf composition': 'Simple',\n",
+       "              'Leaf shape': 'Oblanceolate',\n",
+       "              'Leaf margin': 'Entire',\n",
+       "              'Leaf upper side': 'Green',\n",
+       "              'Leaf lower side': 'Green',\n",
+       "              'Leaf glands': 'Present',\n",
+       "              'Leaf rachis': 'Absent',\n",
+       "              'Thorns/spines': 'Absent',\n",
+       "              'Stipules': 'Absent',\n",
+       "              'Inflorescence type': 'Raceme',\n",
+       "              'Sepals / calyx shape': 'Triangular',\n",
+       "              'Sepals / calyx numer': '5',\n",
+       "              'Petals / corolla shape': 'Tubular',\n",
+       "              'Petals / corolla number': '5',\n",
+       "              'Petals / corolla colour': 'Yellow',\n",
+       "              'Stamen shape': 'Curved',\n",
+       "              'Stamen number': '10',\n",
+       "              'Fruit type': 'Capsule',\n",
+       "              'Fruit shape': 'Ellipsoid',\n",
+       "              'Fruit colour': 'Red',\n",
+       "              'Aril colour': 'Absent',\n",
+       "              'Seed colour': 'Brown'},\n",
+       "             'Bourreria succulenta': {'Life form': 'Herbaceous shrub',\n",
+       "              'Leaf position': 'Alternate',\n",
+       "              'Leaf composition': 'Simple',\n",
+       "              'Leaf shape': 'Oblanceolate',\n",
+       "              'Leaf margin': 'Entire',\n",
+       "              'Leaf upper side': 'Green',\n",
+       "              'Leaf lower side': 'Green',\n",
+       "              'Leaf glands': 'Absent',\n",
+       "              'Leaf rachis': 'Not applicable',\n",
+       "              'Thorns/spines': 'Absent',\n",
+       "              'Stipules': 'Present',\n",
+       "              'Inflorescence type': 'Raceme',\n",
+       "              'Sepals / calyx shape': 'Tubular',\n",
+       "              'Sepals / calyx numer': '5',\n",
+       "              'Petals / corolla shape': 'Tubular',\n",
+       "              'Petals / corolla number': '5',\n",
+       "              'Petals / corolla colour': 'Yellow',\n",
+       "              'Stamen shape': 'Filamentous',\n",
+       "              'Stamen number': '5',\n",
+       "              'Fruit type': 'Capsule',\n",
+       "              'Fruit shape': 'Oblong',\n",
+       "              'Fruit colour': 'Green',\n",
+       "              'Aril colour': 'Not applicable',\n",
+       "              'Seed colour': 'Brown'}})"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Testing\n",
-    "# test_dict_cleaned = {}\n",
-    "# test_dict_original = {}\n",
-    "\n",
-    "# Define the path where the prompt results are stored\n",
-    "folder_prompts = \"../../../data/OpenAI/PromptsResults/OriginalData/\"\n",
-    "\n",
-    "# Get a list of all folders in the path\n",
-    "species_folders = glob.glob(F\"{folder_prompts}*\")\n",
-    "\n",
-    "# Create a defaultdict to store the prompt results for each species\n",
-    "prompt_results_dict = collections.defaultdict(dict)\n",
-    "\n",
-    "# Loop through each species folder\n",
-    "for idx, species_folder in enumerate(species_folders):\n",
-    "    # Extract the species name from the folder path\n",
-    "\n",
-    "    # Split the path in head and tail pair \n",
-    "    species_name = os.path.split(species_folder)[1].replace('_', ' ')\n",
-    "    # Append to dict\n",
-    "    prompt_results_dict[species_name] = {}\n",
-    "\n",
-    "    # Testing\n",
-    "    # test_dict_cleaned[species_name] = {}\n",
-    "    # test_dict_original[species_name] = {}\n",
-    "\n",
-    "    # Get a list of all JSON files in the folder\n",
-    "    json_list = glob.glob(F\"{species_folder}/*\")\n",
-    "\n",
-    "    # Loop through each JSON file\n",
-    "    for json_file in (pbar := tqdm(json_list, leave=False, position=0)):\n",
-    "        # Update the progress bar description\n",
-    "        pbar.set_description(f\"{idx}: {species_name}\")\n",
-    "\n",
-    "        # Create an empty dictionary to store the trait results\n",
-    "        trait_dict = {}\n",
-    "\n",
-    "        # Extract the trait name and file name from the JSON file path\n",
-    "        _, trait = extract_name_and_file(json_file)\n",
-    "        # Clean up the trait name by splitting on capital letters\n",
-    "        trait = split_on_capitals(trait)\n",
-    "\n",
-    "        # Read in the JSON file\n",
-    "        with open(json_file, 'r') as f:\n",
-    "            prompt_result = json.load(f)\n",
-    "\n",
-    "        # Extract the list\n",
-    "        res = extract_list_from_string(prompt_result['choices'][0]['message']['content'])\n",
-    "        # Extract the correct values\n",
-    "        res = extract_values_from_list(res)\n",
-    "\n",
-    "        # Append to dict\n",
-    "        prompt_results_dict[species_name][trait.capitalize()] = res\n"
+    "prompt_results_dict"
    ]
   },
   {
