--- a/notebooks/reports/surveys/1.1_survey_sents_ChatGPT.ipynb
+++ b/notebooks/reports/surveys/1.1_survey_sents_ChatGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,55 @@
     "import glob\n",
     "import csv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = \"../../../data/surveys/responses/\"\n",
+    "response_list = glob.glob(F\"{folder}*\")\n",
+    "\n",
+    "folder = \"../../../data/surveys/surveys/\"\n",
+    "survey_list = [F\"{folder}{lst[59:]}\" for lst in response_list]\n",
+    "\n",
+    "df_survey = pd.read_csv(survey_list[0], sep='\\t')\n",
+    "df_survey.rename(columns={ df_survey.columns[0]: \"Index\" }, inplace = True)\n",
+    "df_response = pd.read_csv(response_list[0], header=None).iloc[: , 1:].T\n",
+    "df_response.rename(columns={ df_response.columns[0]: \"Sentence\", \n",
+    "                            df_response.columns[1]: \"Result\" }, \n",
+    "                            inplace = True)\n",
+    "\n",
+    "\n",
+    "# Surveys\n",
+    "df_surveys = pd.concat((pd.read_csv(f, sep='\\t') for f in survey_list), ignore_index=True)\n",
+    "df_surveys.rename(columns={ df_surveys.columns[0]: \"Index\" }, inplace = True)\n",
+    "\n",
+    "# Response\n",
+    "df_responses = pd.concat((pd.read_csv(f, header=None).iloc[: , 1:].T for f in response_list))\n",
+    "df_responses.rename(columns={ df_responses.columns[0]: \"Sentence\", \n",
+    "                            df_responses.columns[1]: \"Result\" }, \n",
+    "                            inplace = True)\n",
+    "# Melt\n",
+    "df_melt = pd.melt(df_surveys, id_vars=[\"Species\",\n",
+    "                                       \"Main Trait\",\n",
+    "                                       \"SIM\",\n",
+    "                                       \"Dataset\"],\n",
+    "                             value_vars=[\"1\", \"2\", \"3\", \"4\", \"5\",],\n",
+    "                             value_name=\"Sentence\"\n",
+    "                \n",
+    ")\n",
+    "\n",
+    "df_melt = df_melt.dropna()\n",
+    "\n",
+    "# Drop duplicates in each dataframe\n",
+    "df_responses = df_responses.drop_duplicates()\n",
+    "df_melt = df_melt.drop_duplicates()\n",
+    "\n",
+    "# Merge the dataframes based on the 'Sentence' column\n",
+    "df = pd.merge(df_melt, df_responses, on='Sentence')"
+   ]
   }
  ],
  "metadata": {
@@ -23,7 +72,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
   "orig_nbformat": 4
